# portfolio-tracker

./: .gitignore  CLAUDE.md  CONTEXT-MAP.md  LICENSE  README.md  SPEC.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
analysis/: CONTEXT.md  __init__.py  pipeline.py
analysis/agents/: __init__.py  concentration.py  correlation.py  debate.py  etf_analyzer.py  fund_analyzer.py  risk_analyzer.py  stress_test.py
analysis/models/: __init__.py  analysis.py  collected_data.py  correlation.py  holdings.py  risk.py  theory.py
analysis/theories/: __init__.py  all_weather.py  behavioral.py  growth.py  quant.py  value.py
cli/: CONTEXT.md  __init__.py  main.py
cli/commands/: __init__.py  analyze.py  report.py
config/: CONTEXT.md  default.yaml  settings.py
data/: CONTEXT.md  __init__.py  base.py  llm.py
data/providers/: __init__.py  akshare_provider.py  yfinance_provider.py
docs/agents/: domain.md
docs/superpowers/plans/: 2026-05-20-fund-etf-analysis-plan.md  2026-05-21-fund-phase2-analysis.md
docs/superpowers/specs/: 2026-05-20-fund-etf-analysis-design.md
portfolio/: CONTEXT.md  __init__.py  loader.py  models.py
tests/test_analysis/: test_concentration.py  test_correlation.py  test_debate.py  test_etf_analyzer.py  test_fund_analyzer.py  test_llm.py  test_risk_analyzer.py  test_stress_test.py  test_theories.py
tests/test_data/: test_cache.py
tests/test_portfolio/: test_loader.py  test_models.py
web/: CONTEXT.md
